syntax = "proto3";

option csharp_namespace = "TemplateService.Grpc";

package mini_service;

// A todos service.
service Todos {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply);
}

// A request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// A response message containing the greetings.
message HelloReply {
  string message = 1;
}
